--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3"
-tokio = { version = "1", features = ["rt", "time", "sync"] }
+tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
 tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
 parking_lot = "0.12"
 rand = "0.8"
+log = "0.4"
