--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "tokio-takconnect"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+description = "Asynchronous Playtak client"
+keywords = ["tak", "game", "client"]
+repository = "https://github.com/alion02/tokio-takconnect"
 
 [dependencies]
 futures = "0.3"
